[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/avatars/avatar_04.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/gravity_theme.tres" type="Theme" id=2]
[ext_resource path="res://game/hud/statline_stats/StatMisile.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/hud/statline_stats/StatPoints.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/hud/statline_stats/StatIconsWins.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/hud/statline_stats/StatShocker.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/hud/StatLine.gd" type="Script" id=7]
[ext_resource path="res://game/hud/statline_stats/StatIconsLife.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/hud/statline_stats/StatBullet.tscn" type="PackedScene" id=9]

[node name="StatLineRacer" type="Control"]
margin_right = 40.0
margin_bottom = 112.0
theme = ExtResource( 2 )
script = ExtResource( 7 )

[node name="Undi" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.627451 )
anchor_top = -0.001
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.032

[node name="Avatar" type="TextureRect" parent="."]
visible = false
margin_top = -9.0
margin_right = 36.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="PlayerName" type="Label" parent="."]
margin_top = -3.0
margin_right = 18.0
margin_bottom = 10.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "AXL"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="StatIconsLife" parent="." instance=ExtResource( 8 )]
position = Vector2( 2, 21 )
default_active_icons = 5

[node name="StatMisile" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 81.0
margin_right = 23.0
margin_bottom = 89.0

[node name="StatPoints" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 33.0
margin_right = 32.0
margin_bottom = 41.0

[node name="StatShocker" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 97.0
margin_right = 23.0
margin_bottom = 105.0

[node name="StatBullet" parent="." instance=ExtResource( 9 )]
margin_left = -1.496
margin_top = 64.96
margin_right = 21.32
margin_bottom = 72.08

[node name="StatIconsWins" parent="." instance=ExtResource( 5 )]
position = Vector2( 4, 52 )
default_active_icons = 3

[node name="GameoverLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 92.0
margin_top = 41.0
margin_right = 318.0
margin_bottom = 61.0
text = "... ZATE JE KONEC!"
__meta__ = {
"_editor_description_": ""
}

[node name="WinLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 92.0
margin_top = 40.5
margin_right = 319.0
margin_bottom = 71.5
text = "... ZMAGA!!!!!!"
__meta__ = {
"_editor_description_": ""
}
